# schematic_db

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pdoc.yml  publish.yml  publish2.yml  test.yml
rdb/: rdb.py
rdb_type/: mysql.py
schematic_db/: db_builder.py  db_queryer.py  db_updater.py  utils.py
schematic_db/api_utils/: api_utils.py
schematic_db/databases/: database_interface.py  mysql.py  postgres.py  sql_alchemy_database.py  synapse_database.py
schematic_db/db_schema/: db_schema.py
schematic_db/manifest_store/: api_manifest_store.py  manifest_metadata_list.py  manifest_store.py  synapse_manifest_store.py
schematic_db/rdb/: mysql.py  postgres.py  rdb.py  sql_alchemy_database.py  synapse.py  synapse_database.py
schematic_db/rdb_builder/: rdb_builder.py
schematic_db/rdb_queryer/: rdb_queryer.py
schematic_db/rdb_updater/: rdb_updater.py
schematic_db/schema/: api_utils.py  database_config.py  schema.py
schematic_db/schema_generator/: schema_generator.py
schematic_db/schema_graph/: schema_graph.py
schematic_db/utils/: api_utils.py
scripts/: pytest_local.sh  pytest_staging copy.sh  pytest_staging.sh  set_package_version.py
source/: conf.py  index.rst
tests/: conftest.py  test_api_utils.py  test_dataframe_utils.py  test_db_schema.py  test_manifest_store.py  test_schema.py  test_sql.py  test_synapse.py  test_synapse_database.py  test_z_integration.py
tests/integration/: test_api_utils.py  test_integration.py  test_schema_generator.py  test_synapse.py  test_synapse_database.py
tests/unit/: test_db_schema.py  test_sql.py
