[tool.poetry]
name = "schematic_db"
version = "0.0.41"
description = ""
authors = ["andrewelamb <andrewelamb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.19"
PyYAML = "^6.0"
SQLAlchemy-Utils = "^0.41.1"
requests = "^2.28.1"
pandas = "^2.0.0"
networkx = "^3.3.0"
tenacity = "^8.1.0"
pydantic = "^1.10.7"
mysqlclient = {version = "^2.1.1", optional = true}
synapseclient = {version = "^4.0.0", optional = true}
psycopg2-binary = {version = "^2.9.5", optional = true}
validators = "^0.20.0"
interrogate = "^1.5.0"
deprecation = "^2.1.0"

[tool.poetry.extras]
mysql = ["mysqlclient"]
postgres = ["psycopg2-binary"]
synapse = ["synapseclient"]

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pdoc = "^12.1.0"
mypy = "^1.9.0"
mypy-extensions = "^1.0.0"
pylint = "^3.1.0"
black = "24.4.0"
coverage = "^7.2.0"
interrogate = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
ignore-init-module = true
ignore-magic = true
fail-under = 90
